--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,7 @@
-# MySQL.  Versions 4.1 and 5.0 are recommended.
-#
-# Install the MySQL driver:
-#   gem install mysql
-# On Mac OS X:
-#   sudo gem install mysql -- --with-mysql-dir=/usr/local/mysql
-# On Mac OS X Leopard:
-#   sudo env ARCHFLAGS="-arch i386" gem install mysql -- --with-mysql-config=/usr/local/mysql/bin/mysql_config
-#       This sets the ARCHFLAGS environment variable to your native architecture
-# On Windows:
-#   gem install mysql
-#       Choose the win32 build.
-#       Install MySQL and put its /bin directory on your path.
-#
-# And be sure to use new-style password hashing:
-#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
   adapter: mysql
   encoding: utf8
-  reconnect: false
+  reconnect: true
   database: tab_development
   pool: 5
   username: root
@@ -30,7 +14,7 @@ development:
 test:
   adapter: mysql
   encoding: utf8
-  reconnect: false
+  reconnect: true
   database: tab_test
   pool: 5
   username: root
@@ -40,7 +24,7 @@ test:
 production:
   adapter: mysql
   encoding: utf8
-  reconnect: false
+  reconnect: true
   database: tab_production
   pool: 5
   username: root
